<resources>
    <string name="attendance">Attendance Screen</string>
    <string name="in_class">In-Class Screen</string>
    <string name="quiz_results">Quiz Results Screen</string>
    <string name="quiz_screen">Quiz Screen</string>
    <string name="class_discussion">Class Discussion Screen</string>
    <string name="title_activity_welcome_login">WelcomeLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed</string>
    <string name="app_name">ATTENTION</string>
    <string name="app_slogan">CLASSROOM ENGAGEMENT AND TECHNOLOGY INTEGREATION MADE EASY</string>
    <string name="welcome_message">WELCOME_MESSAGE</string>
    <string name="app_banner">ATTENTION</string>
    <string name="login_method_prompt">Let\'s take attendance!</string>
    <string name="autowave_button">BEGIN AUTOWAVE</string>
    <string name="question_text">QUESTION_TEXT</string>
    <string name="answer_text">ANSWER_TEXT</string>
    <string name="answer_1_amount">25%</string>
    <string name="answer_2_amount">25%</string>
    <string name="answer_3_amount">25%</string>
    <string name="answer_4_amount">25%</string>
    <string name="quiz_results_title">Quiz Results</string>
    <string name="user_name">USER_NAME</string>
    <string name="quiz_name">QUIZ_NAME</string>
    <string name="percent">PERCENT</string>
    <string name="letter">LETTER</string>
    <string name="signUp">Sign Up</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="registrationInstructions">Use this form to register for a new account. If you are registering with a Univeristy, use your University issued e-mail address to ensure accurate records keeping by your instructor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_manager_button">Quiz Manager</string>
    <string name="quiz_editor_button">Quiz Editor</string>
    <string name="quiz_last_edit">QUIZ_LAST_EDIT</string>
    <string name="question_prompt">Question:</string>
    <string name="optionA_input">Option A</string>
    <string name="optionB_input">Option B</string>
    <string name="optionC_input">Option C</string>
    <string name="optionD_input">Option D</string>
    <string name="add_answer_option">Add</string>
    <string name="multiple_choice_option">Multiple Choice</string>
    <string name="single_choice_option">Single Choice</string>
    <string name="question_preview">QUESTION_PREVIEW</string>
    <string name="question_type">QUESTION_TYPE</string>
    <string name="quiz_title_hint">Title</string>
    <string name="last_edited">LAST_EDITED</string>
    <string name="question_select_answer_label">Select\nAnswer</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">channel_description</string>
    <string name="channel_id">channel_id</string>
</resources>

