<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/applicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@id/AppDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AppDescription"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registrationInstructions"
        app:layout_constraintBottom_toTopOf="@id/editFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applicationName" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="firstName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/firstName"
        app:layout_constraintBottom_toTopOf="@id/editLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppDescription" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="lastName"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/lastName"
        app:layout_constraintBottom_toTopOf="@id/editEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editFirstName" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        android:text="@string/prompt_email"
        app:layout_constraintBottom_toTopOf="@id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editLastName" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:text="@string/prompt_password"
        app:layout_constraintBottom_toTopOf="@id/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmailAddress" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registerAccount"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>