<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizResults">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@android:color/darker_gray"
            android:padding="5dp"
            android:id="@+id/recyclerView"/>

    <View
            android:layout_width="325dp"
            android:layout_height="300dp"
            android:id="@+id/view"
            android:background="#BABABA"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/answer_1_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_1_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/answer_2_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_2_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/answer_3_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_3_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/answer_4_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/answer_4_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:textSize="18sp"/>

    <View
            android:layout_width="25dp"
            android:layout_height="300dp"
            android:id="@+id/progress_bar_3"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.15"
            android:background="#3F51B5"/>

    <View
            android:layout_width="25dp"
            android:layout_height="300dp"
            android:id="@+id/progress_bar_1"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.4"
            android:background="#4CAF50"/>

    <View
            android:layout_width="25dp"
            android:layout_height="300dp"
            android:id="@+id/progress_bar_2"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.65"
            android:background="#FF9800"/>

    <View
            android:layout_width="25dp"
            android:layout_height="300dp"
            android:id="@+id/progress_bar_4"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.9"
            android:background="#9C27B0"/>

    <TextView
            android:text="@string/quiz_results_title"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:id="@+id/quiz_results_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0.15"
            android:textSize="22sp"/>
    <TextView
            android:text="@string/user_name"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:id="@+id/user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/quiz_results_title"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintHorizontal_bias="0.15"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/quiz_name"
            android:layout_width="250dp"
            android:layout_height="25dp"
            android:id="@+id/quiz_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_name"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintHorizontal_bias="0.15"
            android:textSize="18sp"/>

    <TextView
            android:text="@string/percent"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:id="@+id/percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/quiz_results_title"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintVertical_bias="0.147"
            app:layout_constraintHorizontal_bias="0.077"
            android:textSize="18sp"/>

    <TextView
            android:text="@string/letter"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/letter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quiz_name"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintHorizontal_bias="0.402"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.017"/>

</androidx.constraintlayout.widget.ConstraintLayout>
