<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizEditor">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="410dp"
            android:layout_height="360dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/recyclerView3"/>

    <EditText
            android:layout_width="337dp"
            android:layout_height="110dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editTextTextMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="8dp"/>

    <TextView
            android:text="@string/question_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="26sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

    <EditText
            android:layout_width="348dp"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:text="@string/answer_input"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/add_answer_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.904"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
            android:layout_marginTop="4dp"/>

    <RadioButton
            android:text="@string/multiple_choice_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multiple_choice_button"
            app:layout_constraintEnd_toStartOf="@+id/single_choice_button"
            android:layout_marginEnd="4dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.514"/>

    <RadioButton
            android:text="@string/single_choice_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/single_choice_button"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView3"
            app:layout_constraintVertical_bias="0.333"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
